--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run test:unit
-      - run: npx playwright install
+      - run: npx playwright install --with-deps
       - run: npm run test:e2e
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
